<resources>
    <string name="app_name">Focuser</string>
    <string name="title">Title</string>
    <string name="check">check</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="night">Night</string>
    <string name="auto">Auto</string>
    <string name="list">List</string>
    <string name="news">News</string>
    <string name="focus_methods">Focus Methods</string>
    <string name="settings">Settings</string>
    <string name="default_error_message">Something went wrong…</string>
    <string name="method_name">Method name</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="intervals">Intervals</string>
    <string name="enter_name_error">Enter method name</string>
    <string name="intervals_error">Interval cannot be 0</string>
    <string name="repeat">Repetitions:</string>
    <string name="_00">00</string>
    <string name="repetitions_left">Repetitions left:</string>
    <string name="break_word">Break</string>
    <string name="start">Start</string>
    <string name="working">Working</string>
    <string name="time_left">Time left</string>
    <string name="work">Work</string>
    <string name="finish">Finish</string>
    <string name="start_intervals">Start intervals</string>
    <string name="tap_to_dismiss">Tap to dismiss</string>
</resources>